--- a/kadai/Zenkikadai2.html
+++ b/kadai/Zenkikadai2.html
@@ -15,9 +15,9 @@
 		<main>
 			<div class="localNavigation">
 				<ul>	
-					<li><a href="/home/n23032/Desktop/Webxtention/ZenkiKadai/Zenkikadai.html">サイバーセキュリティ科とは？</a></li>
-					<li><a href="/home/n23032/Desktop/Webxtention/ZenkiKadai/Zenkikadai3.html">目指せる職業は？</a></li>
-					<li><a href="/home/n23032/Desktop/Webxtention/ZenkiKadai/Zenkikadai4.html">取れる資格と時間割</a></li>
+					<li><a href="file:///home/n23032/Desktop/Webxtention/Web-Extention/kadai/Zenkikadai.html">サイバーセキュリティ科とは？</a></li>
+					<li><a href="file:///home/n23032/Desktop/Webxtention/Web-Extention/kadai/Zenkikadai3.html">目指せる職業は？</a></li>
+					<li><a href="file:///home/n23032/Desktop/Webxtention/Web-Extention/kadai/Zenkikadai4.html">取れる資格と時間割</a></li>
 			</div>
 			<div class="content">
 				<img src="img/images.jpeg"width="900">
