--- a/kadai/Zenkikadai2.html
+++ b/kadai/Zenkikadai2.html
@@ -18,6 +18,7 @@
 					<li><a href="file:///home/n23032/Desktop/Webxtention/Web-Extention/kadai/Zenkikadai.html">サイバーセキュリティ科とは？</a></li>
 					<li><a href="file:///home/n23032/Desktop/Webxtention/Web-Extention/kadai/Zenkikadai3.html">目指せる職業は？</a></li>
 					<li><a href="file:///home/n23032/Desktop/Webxtention/Web-Extention/kadai/Zenkikadai4.html">取れる資格と時間割</a></li>
+					<!-- ulの閉じタグがないようです。/ul 大嶺 -->
 			</div>
 			<div class="content">
 				<img src="img/images.jpeg"width="900">
